Fix horizontal/vertical fade z-index

--- a/assets/css/_form.scss
+++ b/assets/css/_form.scss
@@ -101,6 +101,7 @@
   &:after {
     position: absolute;
     content: '';
+    z-index: 1;
   }
 }
 
